# wotoha-rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/wotoha-app/: Cargo.toml
crates/wotoha-app/src/: main.rs
crates/wotoha-contracts/: Cargo.toml
crates/wotoha-contracts/src/: lib.rs
crates/wotoha-control/: Cargo.toml
crates/wotoha-control/src/: discord.rs  lib.rs  service.rs
crates/wotoha-core/: Cargo.toml
crates/wotoha-core/src/: audio_analysis.rs  automix.rs  config.rs  debug.rs  key_analysis.rs  lib.rs  model.rs  session.rs  ui.rs  url.rs  vocal_analysis.rs
crates/wotoha-media/: Cargo.toml
crates/wotoha-media/src/: html.rs  lib.rs  provider.rs  resolver.rs
crates/wotoha-media/src/providers/: bandcamp.rs  mod.rs  niconico.rs  soundcloud.rs  twitch.rs  vimeo.rs  x.rs  youtube.rs  ytdlp.rs
crates/wotoha-runtime/: Cargo.toml
crates/wotoha-runtime/src/: audio_decode.rs  automix_cache.rs  automix_preview.rs  discord.rs  hls_security.rs  lib.rs  niconico_hls.rs  ranged_http.rs  reconnect.rs  songbird.rs  tempo_stretch.rs  transition_dsp.rs  validated_hls.rs
crates/wotoha-voice/: Cargo.toml
crates/wotoha-voice/src/: lib.rs  playback.rs
deploy/: build-ubuntu-musl.ps1  install-ubuntu.sh  wotoha-update.env.example  wotoha-update.service  wotoha-update.sh  wotoha-update.timer  wotoha.env.example  wotoha.service
docs/: single-host-ubuntu.md  ubuntu-deploy.md
