[workspace]
resolver = "3"
members = [
    "crates/wotoha-app",
    "crates/wotoha-contracts",
    "crates/wotoha-control",
    "crates/wotoha-core",
    "crates/wotoha-media",
    "crates/wotoha-voice",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2"] }
serenity = { version = "0.12.5", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
songbird = { version = "0.6.0", default-features = false, features = ["driver", "gateway", "rustls", "serenity", "tungstenite"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.7"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[patch.crates-io]
serenity = { path = "vendor/serenity" }
