[workspace]
resolver = "3"
members = [
    "crates/wotoha-app",
    "crates/wotoha-contracts",
    "crates/wotoha-control",
    "crates/wotoha-core",
    "crates/wotoha-media",
    "crates/wotoha-runtime",
    "crates/wotoha-voice",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.89"
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
pin-project = "1.1.10"
rand = "0.9.2"
regex = "1.12.2"
realfft = "3.5.0"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls", "http2", "cookies"] }
rusty_ytdl = { version = "0.7.4", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = { version = "0.12.5", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
sha2 = "0.10.9"
songbird = { version = "0.6.0", default-features = false, features = ["driver", "gateway", "rustls", "serenity", "tungstenite"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "adpcm", "alac", "flac", "isomp4", "mkv", "mp1", "mp2", "mp3", "ogg", "pcm", "vorbis", "wav"] }
thiserror = "2.0.17"
timestretch = "=0.4.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.7"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[patch.crates-io]
serenity = { path = "vendor/serenity" }
