[package]
name = "wotoha-app"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity.workspace = true
songbird.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wotoha-control = { path = "../wotoha-control" }
wotoha-core = { path = "../wotoha-core" }
wotoha-media = { path = "../wotoha-media" }
wotoha-voice = { path = "../wotoha-voice" }
