[package]
name = "wotoha-media"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
reqwest.workspace = true
songbird.workspace = true
thiserror.workspace = true
tokio.workspace = true
wotoha-contracts = { path = "../wotoha-contracts" }
wotoha-core = { path = "../wotoha-core" }
