[package]
name = "wotoha-media"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
regex.workspace = true
reqwest.workspace = true
rusty_ytdl.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
wotoha-contracts = { path = "../wotoha-contracts" }
wotoha-core = { path = "../wotoha-core" }
