[package]
name = "wotoha-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
async-trait.workspace = true
async-stream = "0.3.6"
bytes = "1.10.1"
cipher = "0.4.4"
cbc = "0.1.2"
dashmap.workspace = true
futures.workspace = true
hls_m3u8 = "0.4.1"
patricia_tree = "0.8.0"
pin-project.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
sha2.workspace = true
songbird.workspace = true
symphonia.workspace = true
thiserror.workspace = true
timestretch.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
wotoha-contracts = { path = "../wotoha-contracts" }
wotoha-control = { path = "../wotoha-control" }
wotoha-core = { path = "../wotoha-core" }
